chore: Add `packages/` folder to workspace

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "author": "Kelvin Luck",
     "workspaces": {
       "packages": [
-        "apps/*"
+        "apps/*",
+        "packages/*"
       ]
     },
     "devDependencies": {
