--- a/packages/my-addon/package.json
+++ b/packages/my-addon/package.json
@@ -72,6 +72,9 @@
   "ember": {
     "edition": "octane"
   },
+  "volta": {
+    "extends": "../../package.json"
+  },
   "ember-addon": {
     "configPath": "tests/dummy/config"
   }
