chore: Add `tsconfig.json` to paths
This isn't necessary but it does help in WebStorm because
you can easily click into the relevant file... Plus it's more
explicit...

--- a/apps/ts-interface/tsconfig.json
+++ b/apps/ts-interface/tsconfig.json
@@ -5,7 +5,7 @@
     "composite": true
   },
   "references": [
-    { "path": "./app" },
-    { "path": "./tests" }
+    { "path": "./app/tsconfig.json" },
+    { "path": "./tests/tsconfig.json" }
   ]
 }
