--- a/packages/my-addon/addon/tsconfig.json
+++ b/packages/my-addon/addon/tsconfig.json
@@ -1,16 +1,15 @@
 {
-    "extends": "../tsconfig.compiler-options.json",
+    "extends": "../../../tsconfig.compiler-options.json",
     "compilerOptions": {
       "baseUrl": ".",
       "declarationDir": "../declarations",
       "paths": {
         "my-addon": ["."],
         "my-addon/*": ["./*"],
-  
+
         "*": ["../types"]
       }
     },
     "include": [".", "../types"],
     "references": []
   }
-  
