--- a/tsconfig.compiler-options.json
+++ b/tsconfig.compiler-options.json
@@ -15,14 +15,15 @@
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "noEmitOnError": true,
-        "noEmit": true,
+//        "noEmit": true,
         "inlineSourceMap": true,
         "inlineSources": true,
         "baseUrl": ".",
         "module": "es6",
         "experimentalDecorators": true,
-        
+
+        "emitDeclarationOnly": true,
+        "noEmit": false,
         "composite": true
     }
   }
-  
