--- a/apps/ts-interface/app/tsconfig.json
+++ b/apps/ts-interface/app/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "files": [],
     "$schema": "http://json.schemastore.org/tsconfig",
     "extends": "../../../tsconfig.compiler-options.json",
     "compilerOptions": {
