--- a/packages/my-addon/tsconfig.json
+++ b/packages/my-addon/tsconfig.json
@@ -5,6 +5,7 @@
   },
   "references": [
     { "path": "addon/tsconfig.json" },
+    { "path": "addon-test-support/tsconfig.json" },
     { "path": "tests/tsconfig.json" }
   ]
 }
