fix: Lose `composite` projects
If we get rid of `composite` TS projects and reference
everything in the root `tsconfig.json` then it looks like
it fixes #1.

However, I'm not convinced it's the *right* solution for
several reasons:

 * It makes everything in the monorepo seem like it's
   available everywhere (whether or not it's installed via
   `package.json`)
 * `composite` should bring performance improvements which
   are probably significant at the scale of the real
   monorepo that I'm working on
 * We don't currently solve for the typings of the `dummy`
   app in any addons we have (which will probably cause
   confusion because they all share a name)

--- a/tsconfig.compiler-options.json
+++ b/tsconfig.compiler-options.json
@@ -15,15 +15,11 @@
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "noEmitOnError": true,
-//        "noEmit": true,
+        "noEmit": true,
         "inlineSourceMap": true,
         "inlineSources": true,
         "baseUrl": ".",
         "module": "es6",
-        "experimentalDecorators": true,
-
-        "emitDeclarationOnly": true,
-        "noEmit": false,
-        "composite": true
+        "experimentalDecorators": true
     }
   }
